# rag-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.deepeval/: .deepeval_telemetry.txt
config/: config.yaml  rag.yaml
docs/: benchmark.md  simple-rag.md
experiments/: class_diagram.py  flow-judge.py  hf download.py  json_Structure.py  project_tree.py
llm/: rag.py
prompts/: prompt.yaml
rag_engine/: eval.py
rag_engine/chunking/: __init__.py  base.py  recursive.py
rag_engine/data_loader/: __init__.py  base.py  json_data.py
rag_engine/embeddings/: __init__.py  base.py  langchain.py
rag_engine/prompts/: rag.yaml
rag_engine/utils/: config_loader.py
rag_engine/vector_db/: __init__.py  base.py  chroma.py  faiss.py
src/: eval.py  simple_rag.py
utils/: helper.py  pdf.py  text.py
