[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.4.0",
    "datasets>=4.4.2",
    "deepeval>=3.7.7",
    "flow-judge>=0.1.2",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-huggingface>=1.2.0",
    "ragas>=0.4.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
